--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:  Maker
+Theme Name:  Maker Mariupol
 Theme URI:   https://themepatio.com/themes/maker/
 Author:      ThemePatio
 Author URI:  https://themepatio.com/
@@ -7,7 +7,7 @@ Description: Maker is a portfolio WordPress theme that features classic grid-bas
 Version:     0.3.0
 License:     GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: maker
+Text Domain: maker-mariupol
 Tags:        one-column, three-columns, right-sidebar, custom-menu, editor-style, featured-images, full-width-template, microformats, sticky-post, theme-options, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
