install bootstrap and enable bootsrap flexbox grid. yeah!

--- a/assets/css/sass/abstracts/_variables.scss
+++ b/assets/css/sass/abstracts/_variables.scss
@@ -139,3 +139,7 @@ $social-icons:(
 	'wordpress.org':     ( 'e823', #21759b ),
 	'youtube.com':       ( 'e825', #c4302b )
 );
+
+// Bootstrap Flexbox grid
+$enable-flex: true;
+$gutter: 20px;
