improve templates and prepare for flex grid

--- a/assets/css/sass/project.scss
+++ b/assets/css/sass/project.scss
@@ -91,6 +91,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import 'layout/galleries';
 @import 'layout/widgets';
 @import 'layout/post-navigation';
+@import 'layout/entry-cards';
 
 /**
  * Templates.
