--- a/style.css
+++ b/style.css
@@ -2540,12 +2540,58 @@ a.custom-logo-link img {
 	color: #bebebe;
 }
 
-.cards-entry {
-	border: 10px solid #d99cff;
+.cards-entry-meta a {
+	text-decoration: none;
+}
+
+.cards-entry-meta a,
+.cards-entry-meta a:visited {
+	color: #585858;
+}
+
+.cards-entry-meta a:hover {
+	color: #ff2441;
+}
+
+.cards-entry-meta-category {
+	overflow: hidden;
+	font-size: 12px;
+	font-weight: bold;
+	line-height: 1;
+	white-space: nowrap;
+	text-transform: uppercase;
+	text-overflow: ellipsis;
 }
 
 .cards-entry-header {
-	border: 10px solid #63acff;
+	margin-top: 11px;
+	margin-bottom: 13px;
+}
+
+.cards-entry-title {
+	margin: 0;
+	font-size: 24px;
+	line-height: 1.24;
+}
+
+.cards-entry-title a {
+	display: block;
+	text-decoration: none;
+}
+
+.cards-entry-title a,
+.cards-entry-title a:visited {
+	color: #616161;
+}
+
+.cards-entry-title a:hover {
+	color: #ff2441;
+}
+
+.cards-entry-excerpt {
+	color: #9a9a9a;
+	font-size: 16px;
+	line-height: 1.3125;
 }
 
 /**
