--- a/assets/css/sass/project.scss
+++ b/assets/css/sass/project.scss
@@ -115,3 +115,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /**
  * Media Queries
  */
+
+// Bootstrap
+@import '../../../node_modules/bootstrap/scss/responsive-embed';
+  @import 'bootstrap/responsive-embed';
