--- a/assets/css/sass/layout/_entry-cards.scss
+++ b/assets/css/sass/layout/_entry-cards.scss
@@ -44,6 +44,7 @@
       font-weight: bold;
       font-size: 12px;
       line-height: 1;
+      letter-spacing: .1em;
 
       @include text-truncate();
     }
