single post updated template

--- a/assets/css/sass/layout/_post-thumbnail.scss
+++ b/assets/css/sass/layout/_post-thumbnail.scss
@@ -13,3 +13,28 @@
 		height: auto;
 	}
 }
+
+.entry-thumbnail {
+  margin-bottom: 16px;
+
+  body.single & {
+	margin-bottom: 34px;
+  }
+
+  .embed-responsive-item {
+	background-color: #e5e5e5;
+  }
+
+  &-link {
+	display: block;
+  }
+
+  a {
+	&:hover,
+	&:focus {
+	  .embed-responsive-item {
+		background-color: #eaeaea;
+	  }
+	}
+  }
+}
