image hover effects

--- a/assets/css/sass/layout/_post-thumbnail.scss
+++ b/assets/css/sass/layout/_post-thumbnail.scss
@@ -33,7 +33,11 @@
 	&:hover,
 	&:focus {
 	  .embed-responsive-item {
-		background-color: #eaeaea;
+		background-color: #dcdcdc;
+	  }
+
+	  .wp-post-image {
+		filter: brightness(85%);
 	  }
 	}
   }
