--- a/assets/css/sass/layout/_entry-content.scss
+++ b/assets/css/sass/layout/_entry-content.scss
@@ -11,4 +11,16 @@
 		display: block;
 		margin-bottom: 1.5em;
 	}
+
+  	a {
+	  &,
+	  &:visited {
+		text-decoration: underline;
+	  }
+
+	  &:hover,
+	  &:focus {
+		text-decoration: none;
+	  }
+	}
 }
