--- a/assets/css/sass/project.scss
+++ b/assets/css/sass/project.scss
@@ -56,6 +56,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import 'base/typography/lists';
 @import 'base/typography/tables';
 @import 'base/typography/code';
+@import 'base/typography/text';
 
 /**
  * Components.
