--- a/assets/css/sass/layout/_footer.scss
+++ b/assets/css/sass/layout/_footer.scss
@@ -2,9 +2,18 @@
 
 .site-footer {
 	@extend .clear;
-	color: $color__text-secondary;
-	@media screen and ( min-width: $sm ) {
-		padding: 1.5em 0;
+
+  	background-color: #e5e5e5;
+  	color: #909090;
+
+  	padding: 42px 0;
+
+  	@media screen and ( min-width: $md ) {
+	  padding-bottom: 100px;
+	}
+
+  	.site {
+	  	background-color: transparent;
 	}
 }
 
@@ -15,4 +24,53 @@
 		@include span( 5 last );
 		text-align: right;
 	}
+}
+
+.site-footer-logo-wrapper {
+  display: block;
+}
+
+.site-footer-logo {
+  display: block;
+  width: 150px;
+  img {
+	opacity: .27;
+  }
+}
+
+a.site-footer-logo {
+  &:hover,
+  &:focus {
+	img {
+	  opacity: .2;
+	}
+  }
+}
+
+.site-info-legal-notes {
+  font-size: 13px;
+  line-height: 1.39;
+}
+
+.site-info-copyright {
+  font-size: 13px;
+  line-height: 1.39;
+
+  @media screen and ( max-width: $sm ) {
+	margin-top: 20px;
+  }
+
+  .admin-email {
+	display: block;
+
+	a {
+	  color: inherit;
+	  text-decoration: underline;
+
+	  &:hover,
+	  &:focus {
+		text-decoration: none;
+	  }
+	}
+  }
 }
