--- a/assets/css/sass/project.scss
+++ b/assets/css/sass/project.scss
@@ -49,6 +49,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /**
  * Typography.
  */
+@import 'base/typography/fonts';
 @import 'base/typography/headings';
 @import 'base/typography/copy';
 @import 'base/typography/links';
