--- a/assets/css/sass/editor-style.scss
+++ b/assets/css/sass/editor-style.scss
@@ -40,6 +40,7 @@ Description: Used to style the TinyMCE editor.
 /**
  * Typography.
  */
+@import 'base/typography/fonts';
 @import 'base/typography/headings';
 @import 'base/typography/copy';
 @import 'base/typography/links';
