--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 
 html {
 	box-sizing: border-box;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Graphik, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 
 	-webkit-text-size-adjust: 100%;
@@ -588,7 +588,7 @@ h6 {
 	margin: 0 0 24px 0;
 	margin: 0 0 1.5rem 0;
 	color: #585858;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Graphik, Helvetica, Arial, sans-serif;
 	font-weight: bold;
 }
 
@@ -681,7 +681,7 @@ blockquote {
 	padding: 1.3333333333em 0;
 	border-top-color: #585858;
 	border-bottom-color: #bebebe;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Graphik, Helvetica, Arial, sans-serif;
 	font-size: 18px;
 	font-size: 1.125rem;
 	font-style: italic;
@@ -702,7 +702,7 @@ blockquote p {
 blockquote cite {
 	display: block;
 	margin: 0 0 -1.2em 0;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Graphik, Helvetica, Arial, sans-serif;
 	font-size: 10px;
 	font-size: 0.625rem;
 	font-style: normal;
@@ -1222,7 +1222,7 @@ p > video {
 	display: block;
 	margin: 1em 0;
 	color: #bebebe;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Graphik, Helvetica, Arial, sans-serif;
 	font-size: 12px;
 	font-size: 0.75rem;
 	font-weight: normal;
@@ -1398,7 +1398,7 @@ a.custom-logo-link img {
 	margin-bottom: 0;
 	padding-top: 1em;
 	color: #585858;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Graphik, Helvetica, Arial, sans-serif;
 	font-size: 24px;
 	font-size: 1.5rem;
 	font-weight: bold;
@@ -3132,6 +3132,20 @@ input[type='submit'].wpcf7-submit:focus {
 
 .embed-responsive-1by1-9 {
 	padding-bottom: 52.63158%;
+}
+
+@font-face {
+	font-family: Graphik;
+	font-weight: normal;
+
+	src: url('../../uploads/2016/10/graphik/Graphik-Regular-Web.woff2');
+}
+
+@font-face {
+	font-family: Graphik;
+	font-weight: bold;
+
+	src: url('../../uploads/2016/10/graphik/Graphik-Medium-Web.woff2');
 }
 
 @media screen and (min-width: 415px) {
