--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -773,14 +773,20 @@ blockquote.alignright {
 	font-family: Graphik;
 	font-weight: normal;
 
-	src: url('../../uploads/2016/10/graphik/Graphik-Regular-Web.woff2');
+	src: url('../../uploads/2016/10/graphik/Graphik-Regular-Web.eot');
+	undefined: undefined;
+	src: url('../../uploads/2016/10/graphik/Graphik-Regular-Web.eot?#iefix') format('embedded-opentype'), url('../../uploads/2016/10/graphik/Graphik-Regular-Web.woff2') format('woff2'), url('../../uploads/2016/10/graphik/Graphik-Regular-Web.woff') format('woff'), url('../../uploads/2016/10/graphik/Graphik-Regular-Web.ttf') format('truetype');
+	undefined: undefined;
 }
 
 @font-face {
 	font-family: Graphik;
 	font-weight: bold;
 
-	src: url('../../uploads/2016/10/graphik/Graphik-Medium-Web.woff2');
+	src: url('../../uploads/2016/10/graphik/Graphik-Medium-Web.eot');
+	undefined: undefined;
+	src: url('../../uploads/2016/10/graphik/Graphik-Medium-Web.eot?#iefix') format('embedded-opentype'), url('../../uploads/2016/10/graphik/Graphik-Medium-Web.woff2') format('woff2'), url('../../uploads/2016/10/graphik/Graphik-Medium-Web.woff') format('woff'), url('../../uploads/2016/10/graphik/Graphik-Medium-Web.ttf') format('truetype');
+	undefined: undefined;
 }
 
 @media screen and (min-width: 768px) {
