--- a/assets/css/sass/layout/_footer.scss
+++ b/assets/css/sass/layout/_footer.scss
@@ -32,11 +32,11 @@
 
 .site-footer-logo {
   display: block;
-  width: 150px;
+  //width: 150px;
   img {
 	opacity: .27;
 	width: auto;
-	height: 50px;
+	height: 60px;
   }
 }
 
