site-header paddings

--- a/assets/css/sass/layout/_header.scss
+++ b/assets/css/sass/layout/_header.scss
@@ -88,7 +88,7 @@ a.custom-logo-link {
 
 @media screen and ( min-width: $sm ) {
 	.site-header {
-		padding: 3em 0;
+		padding: 15px 0 10px 0;
 	}
 
 	.site-description {
