--- a/style.css
+++ b/style.css
@@ -3852,7 +3852,7 @@ input[type='submit'].wpcf7-submit:focus {
 	}
 
 	.site-header {
-		padding: 3em 0;
+		padding: 15px 0 10px 0;
 	}
 
 	.site-description {
