improve post navigation margins

--- a/assets/css/sass/layout/_post-navigation.scss
+++ b/assets/css/sass/layout/_post-navigation.scss
@@ -1,7 +1,12 @@
 /* Post Navigation (Next/Previous Post) */
 
 .post-navigation {
-	margin-bottom: 1.5em;
+	margin-bottom: 1.6em;
+
+	@media screen and ( min-width: $md ) {
+	  	margin-bottom: 3em;
+	}
+
 	span {
 		color: $color__text-secondary;
 	}
