line separators in featured post

--- a/assets/css/sass/components/_lines.scss
+++ b/assets/css/sass/components/_lines.scss
@@ -8,3 +8,9 @@ hr {
 	border: 0;
 	background-color: $color__text-light;
 }
+
+.separator-line {
+  display: block;
+  height: 1px;
+  background-color: $color__text;
+}
