--- a/style.css
+++ b/style.css
@@ -2717,8 +2717,8 @@ body.single .entry-thumbnail {
 }
 
 .maker-mariupol-featured .col-post-credits {
-	padding-top: 16px;
-	padding-bottom: 16px; /*&:before,
+	-ms-flex-item-align: center;
+	align-self: center; /*&:before,
     &:after {
       position: absolute;
       height: 2px;
@@ -2729,9 +2729,6 @@ body.single .entry-thumbnail {
     }
 
 */
-
-	-ms-flex-item-align: center;
-	align-self: center;
 }
 
 .maker-mariupol-featured .row-featured-post-prefix {
@@ -4092,6 +4089,15 @@ input[type='submit'].wpcf7-submit:focus {
 		margin-right: 0;
 	}
 
+	.maker-mariupol-featured .entry-thumbnail {
+		margin-bottom: 0;
+	}
+
+	.maker-mariupol-featured .col-post-credits {
+		padding-top: 16px;
+		padding-bottom: 16px;
+	}
+
 	.maker-mariupol-featured .row-featured-post-prefix {
 		display: block;
 	}
@@ -4508,10 +4514,6 @@ input[type='submit'].wpcf7-submit:focus {
 		left: 0;
 		box-shadow: 0 -8px 38px 30px #fff;
 		content: '';
-	}
-
-	.maker-mariupol-featured .entry-thumbnail {
-		margin-bottom: 0;
 	}
 
 	.page-template-default .hentry {
