fix font size in editor

--- a/assets/css/sass/editor/_editor-normalize.scss
+++ b/assets/css/sass/editor/_editor-normalize.scss
@@ -25,6 +25,7 @@ body {
 	// Addition. Styling
 	max-width: 658px;
 	font-family: inherit;
+  	font-size: $font__size-body-px;
 	margin: 3em 5%;
 	color: $color__text;
 	line-height: $font__line-height-body;
