typography/text for editor-style

--- a/assets/css/sass/editor-style.scss
+++ b/assets/css/sass/editor-style.scss
@@ -49,6 +49,7 @@ Description: Used to style the TinyMCE editor.
 @import 'editor/editor-tables';
 @import 'base/typography/tables';
 @import 'base/typography/code';
+@import 'base/typography/text';
 
 /**
  * Repeatable Patterns
