--- a/assets/css/sass/base/typography/_headings.scss
+++ b/assets/css/sass/base/typography/_headings.scss
@@ -20,27 +20,30 @@ h1 {
 }
 
 h2 {
-	@include font-size( 1.25 );  // 20
+	@include font-size( 2.5 );  // 20
 	line-height: 1.2;
 }
 
 h3 {
-	@include font-size( 1.125 ); // 18
+	//@include font-size( 1.125 ); // 18
+  	font-size: 30px;
 	line-height: 1.2;
 }
 
 h4 {
-	@include font-size( 1.125 ); // 18
+	//@include font-size( 1.125 ); // 18
+  	font-size: 24px;
 	font-weight: normal;
 	line-height: 1.2;
 }
 
 h5 {
-	@include font-size( 0.875 ); // 14
-	margin-bottom: 0.75em;
+	//@include font-size( 0.875 ); // 14
+  	font-size: $font__size-body;
+	//margin-bottom: 0.75em;
 	line-height: 1.2;
-	letter-spacing: 2px;
-	text-transform: uppercase;
+	//letter-spacing: 2px;
+	//text-transform: uppercase;
 }
 
 h6 {
