--- a/editor-style.css
+++ b/editor-style.css
@@ -195,31 +195,25 @@ h1 {
 }
 
 h2 {
-	font-size: 22.5px;
-	font-size: 1.25rem;
+	font-size: 45px;
+	font-size: 2.5rem;
 	line-height: 1.2;
 }
 
 h3 {
-	font-size: 20.25px;
-	font-size: 1.125rem;
+	font-size: 30px;
 	line-height: 1.2;
 }
 
 h4 {
-	font-size: 20.25px;
-	font-size: 1.125rem;
+	font-size: 24px;
 	font-weight: normal;
 	line-height: 1.2;
 }
 
 h5 {
-	margin-bottom: 0.75em;
-	font-size: 15.75px;
-	font-size: 0.875rem;
+	font-size: 18;
 	line-height: 1.2;
-	letter-spacing: 2px;
-	text-transform: uppercase;
 }
 
 h6 {
