--- a/assets/css/sass/abstracts/_variables.scss
+++ b/assets/css/sass/abstracts/_variables.scss
@@ -143,3 +143,33 @@ $social-icons:(
 // Bootstrap Flexbox grid
 $enable-flex: true;
 $grid-gutter-width-base: 20px;
+
+
+
+// Bootstrap Spacing
+//
+// Control the default styling of most Bootstrap elements by modifying these
+// variables. Mostly focused on spacing.
+// You can add more entries to the $spacers map, should you need more variation.
+
+$spacer:   1rem !default;
+$spacer-x: $spacer !default;
+$spacer-y: $spacer !default;
+$spacers: (
+		0: (
+				x: 0,
+				y: 0
+		),
+		1: (
+				x: $spacer-x,
+				y: $spacer-y
+		),
+		2: (
+				x: ($spacer-x * 1.5),
+				y: ($spacer-y * 1.5)
+		),
+		3: (
+				x: ($spacer-x * 3),
+				y: ($spacer-y * 3)
+		)
+) !default;
