--- a/assets/css/sass/project.scss
+++ b/assets/css/sass/project.scss
@@ -121,3 +121,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 // Bootstrap
 @import '../../../node_modules/bootstrap/scss/responsive-embed';
   @import 'bootstrap/responsive-embed';
+
+@import '../../../node_modules/bootstrap/scss/utilities/spacing';
