update link color in text-muted

--- a/assets/css/sass/base/typography/_text.scss
+++ b/assets/css/sass/base/typography/_text.scss
@@ -10,7 +10,7 @@
     &:visited,
     &:hover,
     &:focus {
-      color: $color__text-secondary;
+      color: #909090;
       text-decoration: none;
     }
 
