--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name:  Maker Mariupol
 Theme URI:   https://themepatio.com/themes/maker/
-Author:      ThemePatio
+Author:      ThemePatio (fork by Kolya Korobochkin)
 Author URI:  https://themepatio.com/
 Description: Maker is a portfolio WordPress theme that features classic grid-based layout, clean typography, and minimalistic style, that allows you to create a website that is both modern and timeless. Works great for web and graphic designers, illustrators, photographers, and other creative folks who make beautiful things. Info and demo at https://themepatio.com/themes/maker
 Version:     0.3.0
