--- a/assets/css/admin/main.scss
+++ b/assets/css/admin/main.scss
@@ -1,3 +1,10 @@
 #maker_mariupol_after_title-sortables {
   margin-top: 20px;
 }
+
+.maker-mariupol-postbox-intro-textarea {
+  display: block;
+  margin: 12px 0 0;
+  height: 4em;
+  width: 100%
+}
